# lepton-conf

./: .cproject  .gitignore  .project  Makefile  Makefile.am  README.md  _cfg.sh  _dbg.sh  _mk.sh  _run.sh  actions.c  attrs_dlg.c  attrs_dlg.h  cfg.sh  cfg_edit_dlg.c  cfg_edit_dlg.h  cfg_edit_dlg.sh  cfg_registry.h  cfgreg.c  cfgreg.h  chk.c  conf.c  configure.ac  dbg.sh  dlg.c  events.c  gobj.c  gui.c  gui_mk.c  main.c  mk.sh  proto.h  readme.md  row.c  run.sh  sett.c  tree.c
.github/workflows/: codeql-analysis.yml
data/: Makefile.am  lepton-conf.desktop
docs/: Makefile.am  index.htm  lepton-conf.1  lepton-conf.html  main.css
misc/: CMakeLists.txt  meson.build
src/: Makefile.am  actions.c  attrs_dlg.c  attrs_dlg.h  cfgreg.c  conf.c  dlg.c  events.c  gobj.c  gui.c  main.c  proto.h  row.c  sett.c  sett_list.c  sett_list.h  tree.c
